added all users previledges

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-switch": "^5.0.1",
     "react-toasts": "^3.0.6"
   },
   "scripts": {
