--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-toasts": "^3.0.6"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
